<resources>

    <!-- Login fragment -->
    <string name="login_wait_message">We are loading your Steam library.\nPlease wait…</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">Game time price</string>

    <!-- Common -->
    <string name="game_icon_content_description">Game icon</string>
    <string name="time_icon_content_description">Time icon</string>
    <string name="money_icon_content_description">Money icon</string>
    <string name="currency">Currency</string>

    <!-- Notification -->
    <string name="new_game_notification_title">New game in your library</string>
    <string name="new_game_notification_body">There is a new game in your Steam library.\nDon\'t forget to add its price!</string>

    <!-- LoginActivity -->
    <string name="activity_login_title">Login</string>
    <string name="welcome">Welcome aboard!</string>
    <string name="login_message">Login to your Steam account to see your library.</string>
    <string name="disclaimer">Note: This app can only access to your public information.</string>

    <!-- MainActivity -->
    <string name="activity_main_title">My library</string>
    <string name="new_steam_data_loaded">New Steam data loaded!</string>
    <string name="snack_bar_action_refresh">Refresh</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_ascendant">Ascendant</string>
    <string name="menu_descendant">Descendant</string>
    <string name="menu_sort_alphabetical" translatable="false">A-Z</string>
    <string name="menu_sort_time_played">Time played</string>
    <string name="menu_sort_total_price">Total price</string>
    <string name="menu_sort_price_per_hour">Price per hour</string>
    <string name="never_played">Never played yet</string>
    <string name="tab_recent_title">Recent</string>
    <string name="tab_favorite_title">Favorites</string>
    <string name="tab_all_title">All</string>

    <!-- Drawer -->
    <string name="default_account_name">Account name</string>
    <string name="default_money_spent" translatable="false">1000$</string>
    <string name="default_number_of_games" translatable="false">123</string>
    <string name="default_time_played" translatable="false">5298h</string>
    <string name="default_price_per_hour" translatable="false">0.18$/h</string>
    <string name="nav_btn_logout">Logout</string>
    <string name="nav_btn_settings">Settings</string>

    <!-- Default units -->
    <string name="games">games</string>
    <string name="played">played</string>
    <string name="money_spent">spent</string>


    <!-- Game details activity -->
    <string name="edit">Edit</string>
    <string name="snack_bar_game_saved">Game saved</string>
    <string name="game_image_blurred_description">Game image blurred</string>
    <string name="game_image_description">Game image</string>
    <string name="controller_icon_description">Controller icon</string>
    <string name="time_icon_description">Clock icon</string>
    <string name="of_gaming">of gaming</string>
    <string name="bundle_introduction">This game is included in the bundle</string>
    <string name="default_bundle" translatable="false">Humble Monthly</string>
    <string name="default_price" translatable="false">25$</string>
    <string name="spent_to_buy">spent to buy it</string>

    <!-- Edit game activity -->
    <string name="save">Save</string>
    <string name="error_bundle_name">Choose a bundle or add a new one.</string>

    <!-- Bottom navigation view -->
    <string name="home_action">Home</string>
    <string name="goals_action">Goals</string>
    <string name="finished_action">Finished</string>
    <string name="account_action">Account</string>
    <string name="games_action">Games</string>

    <!-- Home Fragment-->
    <string name="home_card_goals_title">Goals almost achieved</string>
    <string name="home_goals_card_icon_content_description">Goals</string>
    <string name="home_no_goals">You have no goals yet.\nSet the price of your games to display your goals almost finished here.</string>

    <string name="home_card_favorite_goals_title">Favorites</string>
    <string name="home_favorite_goals_card_icon_content_description">Goals</string>
    <string name="home_no_favorite">You have no favorites.\nWhen watching the details of a game, click on the start to have them displayed here and track them easily.</string>

    <string name="home_card_most_played_title">Most played</string>
    <string name="home_most_played_card_icon_content_description">Most played</string>
    <string name="home_no_most_played">No time played information.\nWe could still download Steam information.</string>

    <string name="home_card_most_profitable_title">Most profitable</string>
    <string name="home_most_profitable_card_icon_content_description">Most profitable</string>
    <string name="home_no_most_profitable">No game to display.\nSet the price of your games to display the most profitable here.</string>
    <string name="gold_trophy_content_description">Gold trophy</string>
    <string name="silver_trophy_content_description">Silver trophy</string>
    <string name="bronze_trophy_content_description">Bronze trophy</string>

    <string name="home_rectangle_content_description">Rectangle around the game</string>

    <!-- Games fragment -->
    <string name="reverse_order">Reverse order</string>
    <string name="order_alphabetic">Order alphabetic</string>
    <string name="order_time_played">Order by time played</string>
    <string name="order_price_per_hour">Order by price per hour</string>
    <string name="game_picture_content_description">Game picture</string>

    <!-- Goals fragment -->
    <string name="goals_in_progress_card_icon_content_description">In progress icon</string>
    <string name="goals_in_progress_card_title">Goals in progress</string>
    <string name="goals_not_started_card_icon_content_description">Not started icon</string>
    <string name="goals_not_started_card_title">Goals not started yet</string>
    <string name="goals_games_without_price_card_icon_content_description">No price information</string>
    <string name="goals_games_without_price_card_title">No price information</string>
    <string name="goals_no_goals_in_progress">No games to show.\nSet the price of your games or start a new game from the goals not started list.</string>
    <string name="goals_no_goals_not_started">No games to show.\nSet the price of your games to see the ones that are not started here.</string>
    <string name="goals_no_game_without_price">Congratulation, you have set the price of all your games.</string>

    <!-- Goals finished fragment -->
    <string name="finished_card_icon_content_description">Goals finished icon</string>
    <string name="finished_card_title">Goals finished</string>
    <string name="finished_no_content">No goals achieved.\n Did you set the price of your games?</string>

    <!-- Account fragment -->
    <string name="user_name_sample" translatable="false">User name</string>
    <string name="total_number_of_games_sample" translatable="false">254 games</string>
    <string name="action_settings">Settings</string>
    <string name="total_number_of_hours_played" translatable="false">2598h played</string>
    <string name="total_amount_money_spent" translatable="false">1365€ spent</string>
    <string name="profile_title1">Your average price per hour played:</string>
    <string name="profile_score_sample" translatable="false">0.75€/h</string>
    <string name="profile_goal_reached">Congratulation, you have reached your goal!\nYou are now able to evaluate if a game worth it at the current price before buying it.</string>
    <string name="profile_goal_25_percent_reached">You have almost reached your goal!\nYour should stop buying new games for some time and have fun with the games that you already owned.</string>
    <string name="profile_goal_not_reached">You haven\'t reached your goal yet.\nYour should stop buying new games and have fun with the games that you already owned.</string>
    <string name="account_user_background_content_description">Game library picture</string>
    <string name="account_user_picture_content_description">User picture</string>
    <string name="action_preferences">Edit preferences</string>
    <string name="share_title">You like the app?</string>
    <string name="share_text">Share it with your friends and give it a review on the Google play.</string>
    <string name="share">Share</string>
    <string name="share_message">I have found an app that tracks the cost of my gaming time. You should try it.</string>
    <string name="share_link" translatable="false">https://goo.gl/3dtCl8</string>
    <string name="share_using">Share using</string>
    <string name="account_no_information">We don\'t have the information about the price of your games.\nAdd the price of your games to see your stats.</string>


    <string name="game_details_statistics_title">Statistics</string>
    <string name="activity_edit_game_title">Edit game</string>
    <string name="input_game_name">Name</string>
    <string name="input_game_time">Time played</string>
    <string name="game_bought">I have bought this game</string>
    <string name="input_game_price">Game price</string>
    <string name="rb_alone">alone</string>
    <string name="rb_bundle">in a bundle</string>
    <string name="bundle_name">Bundle name</string>
    <string name="input_bundle_price">Bundle price</string>
    <string name="free">Free</string>
    <string name="alert_new_bundle_title">Name of the new bundle</string>
    <string name="spinner_new_bundle_item">+ New bundle</string>
    <string name="spinner_choose_bundle_item">Choose a bundle</string>
    <string-array name="time_unit">
        <item>h</item>
        <item>mn</item>
    </string-array>


    <!-- Settings fragment -->
    <string name="settings_profitable_limit_summary">Games with a price per hour bellow that value will be considered finished.</string>
    <string name="settings_profitable_limit_title">Profitable limit</string>
    <string name="settings_activity_title">Settings</string>
    <string name="settings_currency_summary">Currency displayed in the app.</string>


    <!-- Example data -->
    <string name="game_title_example_1" translatable="false">Borderlands 2</string>
    <string name="game_goals_progression_hours_1" translatable="false">120 / 135h</string>
    <string name="game_goals_progression_percent_1" translatable="false">89%</string>
    <string name="game_hours_played_1" translatable="false">120h</string>
    <string name="game_price_per_hour_1" translatable="false">0.35€/h</string>
    <string name="game_position_1" translatable="false">#1</string>

    <string name="game_title_example_2" translatable="false">Dungeon Defenders</string>
    <string name="game_goals_progression_hours_2" translatable="false">12 / 48h</string>
    <string name="game_goals_progression_percent_2" translatable="false">25%</string>
    <string name="game_hours_played_2" translatable="false">33h</string>
    <string name="game_price_per_hour_2" translatable="false">0.71€/h</string>
    <string name="game_position_2" translatable="false">#2</string>

    <string name="game_title_example_3" translatable="false">Dawn of War</string>
    <string name="game_goals_progression_hours_3" translatable="false">25 / 43h</string>
    <string name="game_goals_progression_percent_3" translatable="false">58%</string>
    <string name="game_hours_played_3" translatable="false">24h</string>
    <string name="game_price_per_hour_3" translatable="false">0.19€/h</string>
    <string name="game_position_3" translatable="false">#3</string>
</resources>
