<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/nav_iv_profile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:paddingRight="@dimen/nav_header_vertical_spacing"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:scaleType="centerCrop"
            app:srcCompat="@android:drawable/sym_def_app_icon" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nav_tv_nb_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/default_number_of_games"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/nav_tv_nb_games"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/games"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/nav_tv_nb_hours_played"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nav_tv_nb_games"
                android:text="@string/default_time_played"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nav_tv_nb_games"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/nav_tv_nb_hours_played"
                android:text="@string/played"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/nav_tv_money_spent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nav_tv_nb_hours_played"
                android:text="@string/default_money_spent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nav_tv_nb_hours_played"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/nav_tv_money_spent"
                android:text="@string/money_spent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/nav_tv_price_per_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nav_tv_money_spent"
                android:text="@string/default_price_per_hour"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/nav_tv_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/default_account_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp" />
</LinearLayout>