<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MaterialCards">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="@drawable/recycler_view_selector">

        <TextView
            android:id="@+id/tv_game_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rv_games_title_height"
            android:gravity="center"
            android:textAlignment="center"
            tools:text="@string/game_title_example_1"
            android:textSize="@dimen/rv_games_title_text_size" />

        <ImageView
            android:id="@+id/iv_game_picture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rv_games_picture_height"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            android:contentDescription="@string/game_picture_content_description" />

        <TextView
            android:id="@+id/tv_game_time_played"
            style="@style/RvGamesSubText"
            tools:text="@string/game_hours_played_1"
            android:layout_alignLeft="@id/iv_game_picture"
            android:layout_alignStart="@id/iv_game_picture"
            android:layout_below="@id/iv_game_picture"/>
        <TextView
            android:id="@+id/tv_game_price_per_hour"
            style="@style/RvGamesSubText"
            tools:text="@string/game_price_per_hour_1"
            android:layout_alignRight="@id/iv_game_picture"
            android:layout_alignEnd="@id/iv_game_picture"
            android:layout_below="@id/iv_game_picture" />
    </RelativeLayout>
</android.support.v7.widget.CardView>