<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joffreylagut.mysteamgames.mysteamgames.ui.EditGameActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextLabel">

        <EditText
            android:id="@+id/et_game_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_game_name"
            android:paddingBottom="16dp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_between_input">

        <android.support.design.widget.TextInputLayout
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <EditText
                android:id="@+id/et_time_played"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_game_time"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:orientation="vertical">

            <View
                android:id="@+id/line_above_sp_time_unit"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_time_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/line_above_sp_time_unit" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingTop="@dimen/padding_between_input"
        android:text="@string/game_bought"
        android:textSize="12sp" />

    <RadioGroup
        android:id="@+id/rg_bought_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rd_bought_alone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingEnd="8dp"
            android:paddingLeft="0dp"
            android:paddingRight="8dp"
            android:paddingStart="0dp"
            android:text="@string/rb_alone"
            android:theme="@style/MaterialRadioButton" />

        <RadioButton
            android:id="@+id/rd_bought_bundle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/rb_bundle"
            android:theme="@style/MaterialRadioButton" />
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_layout_game_price"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingEnd="0dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingTop="@dimen/padding_between_input">

        <EditText
            android:id="@+id/et_game_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_game_price"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/layout_bundle_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_between_input">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="0dp"
            android:paddingStart="5dp"
            android:text="@string/bundle_name"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sp_bundle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_error_bundle_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/error_bundle_name"
            android:textColor="@android:color/holo_red_dark" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_layout_bundle_price"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingTop="@dimen/padding_between_input">

        <EditText
            android:id="@+id/et_bundle_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_bundle_price"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_save_game_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:onClick="saveGame"
        android:text="@string/save"
        android:theme="@style/MaterialButton" />
</LinearLayout>
